<resources>
    <string name="app_name">Signsy</string>
    <string name="signsy_title">SIGNSY</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="what_type_of_account_do_you_want_to_create">What type of account do you want to create?</string>
    <string name="ngo">NGO</string>
    <string name="user">User</string>
    <string name="first_name">First Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="dob">Date of Birth</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_signed_up">Already Signed Up?</string>
    <string name="last_name">Last Name</string>
    <string name="welcome_back">Welcome back</string>
    <string name="user_s_image">User\'s Image</string>
    <string name="home_button">Home Button</string>
    <string name="search_button">Search Button</string>
    <string name="dictionary">Dictionary</string>
    <string name="profile_button">Profile Button</string>
    <string name="today_s_sign">Today\'s Sign</string>
    <string name="sign_name">Sign Name</string>
    <string name="video_thumbnail">Video Thumbnail</string>
    <string name="play">Play</string>
    <string name="translate">Translate</string>
    <string name="sign_to_speech">Sign To Speech</string>
    <string name="speech_to_sign">Speech To Sign</string>
    <string name="enter_new_password">Enter new Password</string>
    <string name="enter_password_again">Enter Password again</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="name">Name</string>
    <string name="ngo_type">NGO Type</string>
    <string name="phone">Phone</string>
    <string name="ngo_gov_no">NGO Gov No.</string>
    <string name="ngo_website">NGO Website</string>
    <string name="back">Back</string>
    <string name="active_donations">Active Donations</string>
    <string name="donations">Donations</string>
    <string name="green_icon">Green Icon</string>
    <string name="ngo_name">NGO Name</string>
    <string name="donation_for">Donation For</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="red_icon">Red Icon</string>
    <string name="total">Total:</string>
    <string name="signs">Signs</string>
    <string name="please_enter_valid_email_id">Please Enter Valid Email ID</string>
    <string name="mic">Mic</string>
    <string name="user_profile">User Profile</string>
    <string name="user_type">User (Type)</string>
    <string name="user_s_name">User\'s Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="rating">Rating</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="write_feedback_optional">Write feedback (optional)</string>
    <string name="star1">star1</string>
    <string name="star2">star2</string>
    <string name="star3">star3</string>
    <string name="star4">star4</string>
    <string name="star5">star5</string>
    <string name="submit">Submit</string>
    <string name="rate">Rate -</string>
    <string name="feedback">Feedback -</string>
    <string name="add">Add</string>
    <string name="add_word">Add Word</string>
    <string name="say_it">Say It!!</string>
    <string name="clear">Clear</string>
    <string name="new_donation">New Donation</string>
    <string name="donation_description">Donation Description</string>
    <string name="create">Create</string>
    <string name="donation_capacity">Donation Capacity</string>
    <string name="capacity">Capacity</string>
    <string name="start_date_without_colon">Start Date</string>
    <string name="end_date_without_colon">End Date</string>
    <string name="enter_donation_description">Enter donation description</string>
    <string name="ngo_id">NGO ID:</string>
    <string name="id">id</string>
    <string name="ngo_profile">Ngo Profile</string>
    <string name="donation_history">Donation History</string>
    <string name="edit_user_profile">Edit User Profile</string>
    <string name="impaired">Impaired</string>
    <string name="_0123456789">0123456789</string>
    <string name="user_something_com">user@something.com</string>
    <string name="_01_01_2001">01/01/2001</string>
    <string name="age">Age</string>
    <string name="_20">20</string>
    <string name="type">Type</string>
    <string name="https_www_abc_com">https://www.abc.com</string>
    <string name="save_changes">Save Changes</string>
    <string name="select_type">Select Type</string>

    <string-array name="userTypeStrings">
        <item>Select User Type</item>
        <item>Normal</item>
        <item>Deaf</item>
        <item>Dumb</item>
    </string-array>
</resources>