<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6360FF"
    tools:context=".Rating">

    <ImageView
        android:id="@+id/backButt5"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:contentDescription="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

    <TextView
        android:id="@+id/ratingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toEndOf="@+id/backButt5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019" />

    <View
        android:id="@+id/ratingRect"
        android:layout_width="match_parent"
        android:layout_height="780dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:background="@drawable/rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButt5" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="end"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ratingRect">

        <TextView
            android:id="@+id/ratingTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/rate"
            android:textColor="#020202"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/star1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:contentDescription="@string/star1"
                app:srcCompat="@drawable/ic_baseline_star_outline_24" />

            <ImageView
                android:id="@+id/star2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:contentDescription="@string/star2"
                app:srcCompat="@drawable/ic_baseline_star_outline_24" />

            <ImageView
                android:id="@+id/star3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:contentDescription="@string/star3"
                app:srcCompat="@drawable/ic_baseline_star_outline_24" />

            <ImageView
                android:id="@+id/star4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:contentDescription="@string/star4"
                app:srcCompat="@drawable/ic_baseline_star_outline_24" />

            <ImageView
                android:id="@+id/star5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:contentDescription="@string/star5"
                app:srcCompat="@drawable/ic_baseline_star_outline_24" />

        </LinearLayout>

        <TextView
            android:id="@+id/ratingTV2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/feedback"
            android:textColor="#020202"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:background="@drawable/rectangle2"
            android:hint="@string/write_feedback_optional"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:padding="7dp"
            android:textColor="#000000"
            android:textColorHint="#818181"
            android:textSize="20sp" />

        <Button
            android:id="@+id/submitFeedback"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#FF8181"
            android:text="@string/submit"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@drawable/nbar_rect"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/nbarHome5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="18dp"
            android:layout_weight="1"
            android:contentDescription="@string/home_button"
            app:srcCompat="@drawable/home" />

        <ImageView
            android:id="@+id/nbarSearch5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="18dp"
            android:layout_weight="1"
            android:contentDescription="@string/search_button"
            app:srcCompat="@drawable/search" />

        <ImageView
            android:id="@+id/nbarDictionary5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="18dp"
            android:layout_weight="1"
            android:contentDescription="@string/dictionary"
            app:srcCompat="@drawable/dictionary" />

        <ImageView
            android:id="@+id/nbarProfile5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="18dp"
            android:layout_weight="1"
            android:contentDescription="@string/profile_button"
            app:srcCompat="@drawable/profile" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>