<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6360FF"
    tools:context=".UserProfile" >

    <ImageView
        android:id="@+id/backButt4"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:contentDescription="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

    <TextView
        android:id="@+id/userProfileLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_profile"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toEndOf="@+id/backButt4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019" />

    <View
        android:id="@+id/userProfileRect"
        android:layout_width="match_parent"
        android:layout_height="780dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:background="@drawable/rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButt4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="@+id/userProfileRect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserInfo"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/editProfile"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_margin="2dp"
            android:backgroundTint="#6360FF"
            android:text="@string/edit_profile"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/changePassword"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_margin="2dp"
            android:backgroundTint="#6360FF"
            android:text="@string/change_password"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/ratingButt"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_margin="2dp"
            android:backgroundTint="#6360FF"
            android:text="@string/rating"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/logoutButt"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_margin="2dp"
            android:backgroundTint="#6360FF"
            android:text="@string/logout"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/UserInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="@+id/userProfileRect"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/userProfileRect"
        app:layout_constraintVertical_bias="0.03">

        <ImageView
            android:id="@+id/userProfilePic"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:contentDescription="@string/user_s_image"
            android:src="@drawable/boy"
            tools:ignore="ImageContrastCheck" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_s_name"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/userType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_type"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@drawable/nbar_rect"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/nbarHome5_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="18dp"
            android:layout_weight="1"
            android:contentDescription="@string/home_button"
            app:srcCompat="@drawable/home" />

        <ImageView
            android:id="@+id/nbarSearch5_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="18dp"
            android:layout_weight="1"
            android:contentDescription="@string/search_button"
            app:srcCompat="@drawable/search" />

        <ImageView
            android:id="@+id/nbarDictionary5_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="18dp"
            android:layout_weight="1"
            android:contentDescription="@string/dictionary"
            app:srcCompat="@drawable/dictionary" />

        <ImageView
            android:id="@+id/nbarProfile5_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="18dp"
            android:layout_weight="1"
            android:contentDescription="@string/profile_button"
            app:srcCompat="@drawable/profile_selected" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>