<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:id="@+id/donationCard2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/rectangle2"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/rediconHis"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/red_icon"
            app:srcCompat="@drawable/red_icon"
            tools:ignore="ImageContrastCheck,NestedWeights" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="144dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nNgoNameHis1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_bold"
                android:paddingStart="5dp"
                android:text="@string/ngo_name"
                android:textColor="#000000"
                android:textSize="19sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/nDonationForHis1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/donation_for"
                android:textColor="#000000"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/nStartHis1"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:paddingStart="5dp"
                android:text="@string/start_date"
                android:textColor="#000000"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/nEndHis1"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingStart="5dp"
                android:text="@string/end_date"
                android:textColor="#000000"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>