<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="3dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle2"
        android:gravity="end"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/donationCard"
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/greeniconHis"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/green_icon"
                app:srcCompat="@drawable/green_icon"
                tools:ignore="ImageContrastCheck" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/gNgoNameHis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_bold"
                    android:paddingStart="5dp"
                    android:text="@string/ngo_name"
                    android:textColor="#000000"
                    android:textSize="19sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/gDonationForHis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:text="@string/donation_for"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/gStartHis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingStart="5dp"
                    android:text="@string/start_date"
                    android:textColor="#000000"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/gEndHis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:text="@string/end_date"
                    android:textColor="#000000"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/applyButton1"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#7dc579"
            android:text="Apply"
            android:textColor="@color/white" />

    </LinearLayout>
</androidx.cardview.widget.CardView>